src/test/error/scope1.lns
{
    foreach item in unknownList { // error
    }
}
